@@ -376,8 +376,8 @@ static void _acct_kill_step(void)
 static void *_watch_tasks(void *arg)
 {
 
-	while(!jobacct_shutdown) { /* Do this until shutdown is requested */
-		if(!jobacct_suspended) {
+	while (!jobacct_shutdown) { /* Do this until shutdown is requested */
+		if (!jobacct_suspended) {
 			_get_process_data();	/* Update the data */
 		}
 		sleep(freq);
@@ -518,6 +518,7 @@ extern int jobacct_gather_p_startpoll(uint16_t frequency)
 
 extern int jobacct_gather_p_endpoll()
 {
+	jobacct_shutdown = true;
 #ifdef HAVE_AIX
 	slurm_mutex_lock(&jobacct_lock);
 	if(task_list)
@@ -525,7 +526,6 @@ extern int jobacct_gather_p_endpoll()
 	task_list = NULL;
 	slurm_mutex_unlock(&jobacct_lock);
 #endif
-	jobacct_shutdown = true;
 
 	return SLURM_SUCCESS;
 }
@@ -592,11 +592,16 @@ extern int jobacct_gather_p_set_proctrack_container_id(uint32_t id)
 
 extern int jobacct_gather_p_add_task(pid_t pid, jobacct_id_t *jobacct_id)
 {
+	if (jobacct_shutdown)
+		return SLURM_ERROR;
 	return jobacct_common_add_task(pid, jobacct_id, task_list);
 }
 
 extern struct jobacctinfo *jobacct_gather_p_stat_task(pid_t pid)
 {
+	if (jobacct_shutdown)
+		return NULL;
+
 #ifdef HAVE_AIX
 	_get_process_data();
 #endif
@@ -608,6 +613,8 @@ extern struct jobacctinfo *jobacct_gather_p_stat_task(pid_t pid)
 
 extern struct jobacctinfo *jobacct_gather_p_remove_task(pid_t pid)
 {
+	if (jobacct_shutdown)
+		return NULL;
 	return jobacct_common_remove_task(pid, task_list);
 }
 
